refactor: improve HTML

--- a/debits/templates/lot/debits_form.html
+++ b/debits/templates/lot/debits_form.html
@@ -19,9 +19,7 @@
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
-        <div class="d-flex justify-content-end">
-            <input type="submit" value="Revisar" class="btn-smart my-3 w-50">
-        </div>
+        <input type="submit" value="Enviar" class="btn-smart my-3">
     </form>
 
 </div>
