--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <!-- HEADER -->
-<div class="card-smart d-flex justify-content-between sticky-top">
+<div class="m-3 d-flex justify-content-between">
     <div>
         <h2 class="m-0 fw-bolder fs-3">
             {{enterprise}}
