refactor: tip in HTMl

--- a/financials/templates/financial_movement/ofx_upload.html
+++ b/financials/templates/financial_movement/ofx_upload.html
@@ -14,8 +14,11 @@
 <div class="card-smart">
 
     <div class="px-3">
-        <p>
-            Exporte no seu banco o Extrato no formato OFX (Money 2000 em diante).
+        <p class="m-0 fs-7">
+            - Exporte no seu banco o Extrato no formato OFX (Money 2000 em diante).
+        </p>
+        <p class="fs-7">
+            - Para cadastrar movimentação sem OFX não selecione nenhum arquivo e clique em 'Revisar'.
         </p>
         <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
