--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@ GENERAL STYLE
     font-family: "Nunito Sans", sans-serif;
 }
 
+body{
+    font-size: 14px;
+}
+
 .fill-icon {
     font-variation-settings: 'FILL'1;
 }
@@ -26,8 +30,11 @@ GENERAL STYLE
     background-color: #6702B4 !important;
 }
 
+.fs-6{
+    font-size: 14px !important;
+}
 .fs-7{
-    font-size: 13px;
+    font-size: 11px;
 }
 
 /* ------------------
@@ -40,6 +47,7 @@ BUTTONS STYLE
     color: #FFFF !important;
     font-weight: 700;
     border-radius: 0.3em !important;
+    font-size: 14px !important;
     border: 0 !important;
     text-decoration: none;
 }
@@ -53,10 +61,14 @@ BUTTONS STYLE
 FORMS STYLE 
 -------------------*/
 
+.btn{
+    font-size: 14px !important;
+}
+
 label {
     color: #000;
     /* Cor do texto */
-    font-size: 1.2rem;
+    font-size: 14px !important;
     /* Tamanho da fonte */
     font-weight: 500;
     /* Peso da fonte */
@@ -71,6 +83,7 @@ input {
     border-radius: 0.2em;
     background-color: #FFFF;
     display: block;
+    font-size: 14px !important;
 }
 
 input:focus {
