--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -12,9 +12,9 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-debits" aria-controls="collapse-debits">
-                        <span class="material-symbols-outlined me-2 fw-light">
+                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
                             location_city
                         </span>
                         Controle de débitos
@@ -24,7 +24,7 @@
                     class="accordion-collapse collapse {% if 'debits' in request.path|urlencode %}show{% endif %}"
                     data-bs-parent="#accordionSidebar">
                     <div class="m-0 py-1">
-                        <ul class="fw-medium">
+                        <ul class="fw-light">
                             <li class="my-2 list-unstyled">
                                 <a class="text-decoration-none {% if 'enterprise/' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}"
                                     href="{% url 'enterprise_list' %}">
@@ -46,10 +46,10 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-customers"
                         aria-controls="collapse-customers">
-                        <span class="material-symbols-outlined me-2 fw-light">
+                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
                             groups
                         </span>
                         Clientes e Fornecedores
@@ -75,9 +75,9 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-payments" aria-controls="collapse-payments">
-                        <span class="material-symbols-outlined me-2 fw-light">
+                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
                             payments
                         </span>
                         Financeiro
