fix: error link installments

--- a/financials/templates/financial_movement/list.html
+++ b/financials/templates/financial_movement/list.html
@@ -177,7 +177,7 @@
                 <tr>
                     <td class="text-secondary fs-7">
                         <a
-                            href="{% url 'financial_transaction_list' %}?id={{movement.financial_transaction_installment.id}}">
+                            href="{% url 'financial_transaction_list' %}?id={{movement.financial_transaction_installment.id|int}}">
                             #{{movement.id}}
                         </a>
                     </td>
