--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -46,34 +46,45 @@
     </p>
 
     <div class="row g-3">
-        <div class="col-md-4">
+        <div class="col-md-7">
             <div class="card p-3">
                 <p class="m-0">
-                    Geral
+                    Total
                 </p>
                 <p class="m-0 fs-4 text-black">
                     R$ {{total_debts.amount__sum}}
                 </p>
+                <div>
+                    <canvas id="totalDebitos" class="mt-3"></canvas>
+                </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
             <div class="card p-3">
-                <p class="m-0">
-                    Débitos a pagar (EMPRESA)
-                </p>
                 <p class="m-0 fs-4 text-black">
-                    R$ {{total_debts_company.amount__sum}}
+                    O que são esses valores?
                 </p>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card p-3">
                 <p class="m-0">
-                    Débitos a receber (CLIENTES)
+                    Esses débitos são os IPTUs cadastrados, você mesmo pode cadastrar esses débitos somente com o
+                    <strong>extrato de débitos</strong> da inscrição municipal tirada no site da prefeitura.
                 </p>
+                <hr>
                 <p class="m-0 fs-4 text-black">
-                    R$ {{total_debts_costumers.amount__sum}}
+                    Como fazer?
                 </p>
+                <p class="m-0">
+                    Para cadastrar basta acessar o <a href="https://iptu.campogrande.ms.gov.br/">site da prefeitura</a>,
+                    e baixar o extrato. Depois aqui no
+                    sistema vá em <strong>Controle de débitos > Atualização de débitos IPTU > Upload</strong>, ou clique
+                    no botão abaixo. E nessa
+                    seção selecione o extrato baixado e salve, pronto está atualizado os valores daquela inscrição.
+                </p>
+                <a href="{% url 'lot_debits_create' %}" class="btn btn-smart d-flex align-items-center justify-content-center mt-3">
+                    <span class="material-symbols-outlined me-2">
+                        receipt
+                    </span>
+                    Importar extrato do IPTU
+                </a>
             </div>
         </div>
     </div>
@@ -81,4 +92,42 @@
 
 </section>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
+
+<script>
+    const ctx = document.getElementById('totalDebitos').getContext('2d');
+
+    let debitosCliente = parseFloat('{{ total_debts_costumers.amount__sum|default:0 }}');
+    let debitosEmpresa = parseFloat('{{ total_debts_company.amount__sum|default:0 }}');
+
+    new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+            labels: ['Débitos Empresa', 'Débitos Clientes'],
+            datasets: [{
+                label: 'R$',
+                data: [debitosEmpresa, debitosCliente],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            plugins: {
+                datalabels: {
+                    color: '#fff',
+                    formatter: (value) => 'R$ ' + value,
+                    font: {
+                        weight: 'bold',
+                        size: 18
+                    }
+                },
+                legend: {
+                    position: 'bottom'
+                }
+            }
+        },
+        plugins: [ChartDataLabels]  // <- ativa o plugin
+    });
+</script>
 {% endblock %}
